<resources>
    <string name="app_name">国海众科集团</string>
    <string name="paizhao">拍照</string>
    <string name="xiangce">相册</string>
    <string name="tiaoguo">跳过</string>
    <string name="app_prompt">提示</string>
    <string name="app_submit">提交</string>
    <string name="app_submit_true">提交成功</string>
    <string name="app_confirm">确认</string>
    <string name="app_confirm_true">确认更新</string>
    <string name="app_cancel">取消</string>
    <string name="app_nomore">没有更多了</string>
    <string name="app_re_register">账户登录过期，请重新登录</string>
    <string name="app_out">再按一次退出程序</string>
    <string name="app_imgerr">图片压缩失败</string>
    <string name="app_change_true">修改成功</string>
    <string name="app_setup_true">设置成功</string>
    <string name="app_card">请确认已经插入SD卡</string>
    <string name="app_iscancel">确认取消吗？</string>
    <string name="app_jsonerr">数据解析错误</string>
    <string name="app_file">图片已经保存到手机根目录</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_pay_true">支付成功</string>
    <string name="app_pay_false">支付失败</string>
    <string name="app_sendcode">获取验证码</string>
    <string name="app_sendcode_hint">验证码发送成功</string>
    <string name="app_sendcode_hint1">正在获取验证码，请稍后...</string>
    <string name="app_reacquirecode">重新获取</string>
    <string name="app_codethen">s后获取</string>
    <string name="app_tian">天</string>
    <string name="app_ren">人</string>
    <string name="app_yuan">元</string>
    <string name="app_ge">个</string>
    <string name="app_bei">倍</string>
    <string name="app_ji">级</string>
    <string name="app_shi">h</string>
    <string name="app_fen">m</string>
    <string name="app_miao">s</string>
    <string name="app_ri">日</string>
    <string name="app_yi">一</string>
    <string name="app_er">二</string>
    <string name="app_san">三</string>
    <string name="app_si">四</string>
    <string name="app_wu">五</string>
    <string name="app_liu">六</string>
    <string name="app_nian">年</string>
    <string name="app_yue">月</string>
    <string name="app_ci">次</string>
    <string name="app_tai">台</string>
    <string name="app_type_quanbu">全部</string>
    <string name="app_type_zhuangtai">按状态</string>
    <string name="app_type_bizhong">按币种</string>
    <string name="app_type_usdt">USDT</string>
    <string name="app_type_fil">FIL</string>
    <string name="app_type_paixu">按排序</string>
    <string name="app_type_leixing">类型</string>
    <string name="app_type_daishenhe">待审核</string>
    <string name="app_type_yitongguo">已通过</string>
    <string name="app_type_weitongguo">未通过</string>
    <string name="app_type_jiangxu">降序</string>
    <string name="app_type_shengxu">升序</string>
    <string name="app_type_jinxingzhong">进行中</string>
    <string name="app_type_yiwancheng">已完成</string>
    <string name="app_type_anyingli">按盈利</string>
    <string name="app_type_anshijian">按时间</string>
    <string name="app_type_anjine">按金额</string>
    <string name="app_type_yiijihuo">已激活</string>
    <string name="app_type_yijiangli">已奖励</string>
    <string name="app_type_zhuanchu">转出</string>
    <string name="app_type_zhuanru">转入</string>
    <string name="app_type_dengdaizhong">等待中</string>
    <string name="app_type_jiaoyizhong">交易中</string>
    <string name="app_type_yijieshu">已结束</string>
    <string name="app_type_shiyongzhong">使用中</string>
    <string name="app_type_daifukuan">待付款</string>
    <string name="app_type_yifukuan">已付款</string>
    <string name="app_type1">待发货</string>
    <string name="app_type12">安装中</string>
    <string name="app_type2">运行中</string>
    <string name="app_type3">临时转出</string>
    <string name="app_type4">临时转入</string>
    <string name="app_type5">永久转出</string>
    <string name="app_type6">永久转入</string>
    <string name="app_type7">回购申请待审核</string>
    <string name="app_type8">回购申请通过</string>
    <string name="app_type9">回购申请未通过</string>
    <string name="app_type10">临时转入归还</string>
    <string name="app_type11">临时转出收回</string>
    <string name="app_loading">正在加载...</string>
    <string name="app_loading1">正在提交数据...</string>
    <string name="app_loading2">正在获取数据...</string>
    <string name="app_loading3">正在设置分享数据...</string>
    <string name="app_loading4">正在获取支付信息...</string>
    <string name="app_nodata">暂无数据</string>
    <string name="app_reload">没有数据</string>
    <string name="app_reload1">加载出错</string>
    <string name="app_abheader_refresh">下拉刷新</string>
    <string name="app_abheader_refreshtime">刷新时间：</string>
    <string name="app_abheader_refreshtlastime">上次刷新时间：</string>
    <string name="app_abheader_refreshletgo">松开刷新</string>
    <string name="app_abheader_refreshing">正在刷新...</string>
    <string name="app_abheader_refreshnowtime">本次刷新时间：</string>
    <string name="app_abfooter_loadmore">载入更多</string>
    <string name="app_abfooter_loading">正在加载...</string>
    <string name="app_abfooter_loadno">没有了！</string>
    <string name="app_abfooter_loadnodata">没有数据</string>
    <string name="app_err">网络状态不佳</string>
    <string name="app_err1">数据出错了！</string>
    <string name="app_refresh">刷新</string>
    <string name="app_refresh1">分钟前</string>
    <string name="app_refresh2">小时前</string>
    <string name="app_refresh3">天前</string>
    <string name="app_refresh4">刚刚</string>
    <string name="app_refresh5">松开载入更多</string>
    <string name="app_refresh6">查看更多</string>
    <string name="fragment1">矿机</string>
    <string name="fragment2">算力</string>
    <string name="fragment3">拼购</string>
    <string name="fragment4">钱包</string>
    <string name="fragment5">我的</string>
    <string name="update_hint">版本更新</string>
    <string name="update_hint1">SD卡不可用，请插入SD卡</string>
    <string name="update_hint2">已是最新版本</string>
    <string name="update_hint3">正在下载</string>
    <string name="update_hint4">请稍候...</string>
    <string name="update_hint5">正在安装程序</string>
    <string name="update_hint6">安装失败：</string>
    <string name="update_hint7">温馨提示</string>
    <string name="update_hint8">必须授权才能安装APK，请设置允许安装</string>
    <string name="update_hint9">设置</string>
    <string name="update_hint10">暂不更新</string>
    <string name="update_hint11">立即更新</string>
    <string name="update_hint12">发现新版本，升级后体验更顺畅！\n不升级当前版本不可使用</string>
    <string name="login_h1">请输入手机号码</string>
    <string name="login_h2">请输入密码</string>
    <string name="login_h3">注册账号</string>
    <string name="login_h4">忘记密码?</string>
    <string name="login_h5">登录</string>
    <string name="login_h6">第三方登录</string>
    <string name="login_h7">正在登录...</string>
    <string name="login_h8">确认授权</string>
    <string name="login_h9">您的账号已被冻结，请及时与客服联系</string>
    <string name="login_h10">正在授权登录...</string>
    <string name="login_h11">授权失败</string>
    <string name="login_h12">请输入验证码</string>
    <string name="login_h13">该账户尚未激活</string>
    <string name="login_h14">还没有账号？</string>
    <string name="login_h15">登录授权</string>
    <string name="login_h16">国家/地区</string>
    <string name="login_h17">请使用真机登录</string>
    <string name="login_h18"></string>
    <string name="login_h19"></string>
    <string name="login_h20"></string>
    <string name="login_h21"></string>
    <string name="login_h22"></string>
    <string name="registered_h1">请输入手机号码</string>
    <string name="registered_h2">请输入验证码</string>
    <string name="registered_h3">请设置密码</string>
    <string name="registered_h4">请确认密码</string>
    <string name="registered_h5">请输入邀请码</string>
    <string name="registered_h6">已阅读并同意</string>
    <string name="registered_h7">《用户使用协议》</string>
    <string name="registered_h8">确认</string>
    <string name="registered_h9">注册</string>
    <string name="registered_h10">注册成功</string>
    <string name="registered_h11">请设置昵称</string>
    <string name="registered_h12">请输入相同的密码</string>
    <string name="registered_h13">该昵称可用</string>
    <string name="registered_h14">正在注册...</string>
    <string name="registered_h15">注册请阅读并同意《用户使用协议》</string>
    <string name="registered_h16">《隐私条款》</string>
    <string name="forgetpassword_h1">请输入手机号码</string>
    <string name="forgetpassword_h2">请输入验证码</string>
    <string name="forgetpassword_h3">请输入新密码</string>
    <string name="forgetpassword_h4">请再次输入新密码</string>
    <string name="forgetpassword_h5">确认</string>
    <string name="forgetpassword_h6">忘记密码</string>
    <string name="forgetpassword_h7">请输入相同的密码</string>
    <string name="forgetpassword_h8">重置密码成功</string>
    <string name="forgetpassword_h9">正在重置密码，请稍后...</string>
    <string name="about_title">关于我们</string>
    <string name="about_h1">APP下载</string>
    <string name="about_h2">APP介绍</string>
    <string name="about_h3">APP更新</string>
    <string name="about_h4">版权所有\nCopyright @2021 国海众科集团\nAll Rights Reserved</string>
    <string name="about_h5">已经是最新版，无需更新</string>
    <string name="setup_title">设置</string>
    <string name="setup_h1">交易密码设置</string>
    <string name="setup_h2">登录密码设置</string>
    <string name="setup_h3">绑定银行卡</string>
    <string name="setup_h4">设置个人资料</string>
    <string name="setup_h5">关于我们</string>
    <string name="onlineservice_title">联系客服</string>
    <string name="onlineservice_hint">请输入您想要咨询的问题</string>
    <string name="onlineservice_system1">手机厂商：</string>
    <string name="onlineservice_system2">手机型号：</string>
    <string name="onlineservice_system3">Android系统版本号：</string>
    <string name="onlineservice_system4">本程序版本号：</string>
    <string name="onlineservice_h1">常见问题</string>
    <string name="onlineservice_h2">竭诚为您服务</string>
    <string name="onlineservice_h3">服务热线：</string>
    <string name="onlineservice_h4">联系客服</string>
    <string name="changepassword_h1">修改登录密码</string>
    <string name="changepassword_h2">旧密码</string>
    <string name="changepassword_h3">新密码</string>
    <string name="changepassword_h4">确认新密码</string>
    <string name="changepassword_h5">请输入旧密码</string>
    <string name="changepassword_h6">请输入新密码</string>
    <string name="changepassword_h7">请再次确认新密码</string>
    <string name="changepassword_h8">两次输入的密码不一致</string>
    <string name="changepassword_h9">修改密码成功，请重新登录</string>
    <string name="changepassword_h10">确定</string>
    <string name="settransactionpassword_h1">设置交易密码</string>
    <string name="settransactionpassword_h2">手机号</string>
    <string name="settransactionpassword_h3">请输入手机号</string>
    <string name="settransactionpassword_h4">验证码</string>
    <string name="settransactionpassword_h5">请输入验证码</string>
    <string name="settransactionpassword_h6">交易密码</string>
    <string name="settransactionpassword_h7">请输入交易密码</string>
    <string name="settransactionpassword_h8">确认交易密码</string>
    <string name="settransactionpassword_h9">请再次确认交易密码</string>
    <string name="settransactionpassword_h10">两次输入的密码不一致</string>
    <string name="settransactionpassword_h11">交易密码修改成功</string>
    <string name="settransactionpassword_h12">确定</string>
    <string name="password_h1">交易密码</string>
    <string name="password_h2">交易密码错误或未设置，是否前往设置？</string>
    <string name="password_h3">币地址</string>
    <string name="password_h4">币地址暂未设置，是否前往设置？</string>
    <string name="password_h5">确认</string>
    <string name="password_h6">取消</string>
    <string name="password_h7">实名认证</string>
    <string name="password_h8">您暂未实名认证，是否前往认证？</string>
    <string name="password_h9">银行卡暂未设置，是否前往设置？</string>
    <string name="share_h27">分享</string>
    <string name="share_h29">用户名</string>
    <string name="address_h2">USDT地址</string>
    <string name="address_h3">请输入USDT地址</string>
    <string name="address_h4">手机号</string>
    <string name="address_h5">请输入手机号</string>
    <string name="address_h6">验证码</string>
    <string name="address_h7">请输入验证码</string>
    <string name="address_h8">交易密码</string>
    <string name="address_h9">请输入交易密码</string>
    <string name="address_h10">确定</string>
    <string name="address_h19">请提供TRC-20格式的USDT地址，否则您的资产将无法找回</string>
    <string name="share_h2">邀请码：</string>
    <string name="share_h3">销售分成</string>
    <string name="share_h4">累计佣金</string>
</resources>