<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/yuanjiao_10_baise_top"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:text="@string/settransactionpassword_h2"
                android:textColor="@color/black3"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:focusable="false"
                android:gravity="center_vertical|right"
                android:hint="@string/settransactionpassword_h3"
                android:inputType="phone"
                android:paddingLeft="100dp"
                android:paddingRight="10dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/black3"
                android:textSize="15sp"
                android:textStyle="bold"
                android:theme="@style/MyEditText" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/settransactionpassword_h5"
                android:inputType="number"
                android:paddingRight="100dp"
                android:singleLine="true"
                android:textColor="@color/black1"
                android:textColorHint="@color/black3"
                android:textSize="15sp"
                android:theme="@style/MyEditText" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="14dp"
                android:background="@drawable/yuanjiaobiankuang_10_lvse"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:text="@string/app_sendcode"
                android:textColor="@color/green"
                android:textSize="11sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:text="@string/settransactionpassword_h6"
                android:textColor="@color/black1"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/settransactionpassword_h7"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black1"
                android:textColorHint="@color/black3"
                android:textSize="15sp"
                android:theme="@style/MyEditText" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:text="@string/settransactionpassword_h8"
                android:textColor="@color/black1"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/settransactionpassword_h9"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black1"
                android:textColorHint="@color/black3"
                android:textSize="15sp"
                android:theme="@style/MyEditText" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_img1"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/settransactionpassword_h12"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>