<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/yuanjiao_10_bg"
        android:orientation="vertical"
        android:paddingTop="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/yuanjiao_5_baise"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:paddingBottom="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="14dp"
                android:text="@string/address_h2"
                android:textColor="@color/black1"
                android:textColorHint="@color/black4" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="end"
                android:hint="@string/address_h3"
                android:paddingBottom="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="14dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/black4" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/yuanjiao_5_baise"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:paddingBottom="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="14dp"
                android:text="@string/address_h4"
                android:textColor="@color/black1"
                android:textColorHint="@color/black4" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="end"
                android:hint="@string/address_h5"
                android:paddingBottom="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="14dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/black4" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/yuanjiao_5_baise"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/address_h6"
                android:paddingBottom="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="14dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/black4" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/address_h7"
                android:inputType="number"
                android:paddingBottom="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="14dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/black4" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="14dp"
                android:background="@drawable/btn_yzm"
                android:onClick="onClick"
                android:paddingBottom="8dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:text="@string/app_sendcode"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/yuanjiao_5_baise"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="14dp"
                android:text="@string/address_h8"
                android:textColor="@color/black1"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="right"
                android:hint="@string/address_h9"
                android:inputType="textPassword"
                android:paddingBottom="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="14dp"
                android:textColor="@color/black1"
                android:textColorHint="@color/black4"
                android:textSize="15sp" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_h19"
            android:textColor="@color/red"
            android:padding="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@mipmap/bg_btn1"
            android:gravity="center"
            android:onClick="onClick"
            android:textSize="15sp"
            android:padding="12dp"
            android:text="@string/address_h10"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>
