<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/yuanjiao_10_bg"
        android:orientation="vertical"
        android:padding="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/yuanjiao_5_baiseyinying"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:text="@string/changepassword_h2"
                android:textSize="15sp"
                android:textColor="@color/default_text"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/changepassword_h5"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textSize="15sp"
                android:singleLine="true"
                android:textColor="@color/txt_black1"
                android:textColorHint="@color/txt_black2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/yuanjiao_5_baiseyinying"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:textSize="15sp"
                android:text="@string/changepassword_h3"
                android:textColor="@color/default_text"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/changepassword_h6"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textSize="15sp"
                android:singleLine="true"
                android:textColor="@color/txt_black1"
                android:textColorHint="@color/txt_black2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/yuanjiao_5_baiseyinying"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:text="@string/changepassword_h4"
                android:textSize="15sp"
                android:textColor="@color/default_text"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/changepassword_h7"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textSize="15sp"
                android:singleLine="true"
                android:textColor="@color/txt_black1"
                android:textColorHint="@color/txt_black2" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@mipmap/bg_btn1"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/changepassword_h10"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>